--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -8,30 +8,31 @@
 	<script src="/script.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
 
-<style type="text/css">
-<!--
-BODY { 
-background: url(cover.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
--->
+	<style type="text/css">
+		<!--
+		BODY { 
+			background: url(cover.jpg) no-repeat center center fixed; 
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
+	-->
 </style>
 
 <form action = '/root' method = 'get'>
-<div class="container transparentBox">
-  <div class="row offset6" id="login-container">
-    <div class="span8 offset2">
- <p><a href="/about" id="link">Film Festival Finder for Filmmakers</a></p>
-    </div>
-  </div>
-</div>
+	<div class="container transparentBox">
+		<div class="row offset6" id="login-container">
+			<div class="span8 offset2">
+				<p><a href="/about" id="link">Foray into the Film Festival Finder for Filmmakers</a></p>
+			</div>
+		</div>
+	</div>
 </form>
 
 
