--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -3,9 +3,9 @@
     <h1>Log in!</h1>
     <hr>
     <form class="form" method="post" action="/login">
-        <input type="text" class="form-control" placeholder="Enter your e-mail" name="email">
+        <input type="text" class="form-control" placeholder="Enter your e-mail" name="email" value="stephaniejnilles@gmail.com">
         <br><br>
-        <input type="password" class="form-control" placeholder="Choose a password" name="password">
+        <input type="password" class="form-control" placeholder="Choose a password" name="password" value="password">
         <br><br>
         <input type="submit" value="log me in" class="btn btn-primary">
     </form>
