--- a/Public/style.css
+++ b/Public/style.css
@@ -1,9 +1,64 @@
+
+.page-header{
+	font-family: courier;
+	font-size: 16px;
+}
+.container{
+	font-family: raleway;
+}
+.logButtons{
+	margin-left: 1%
+}
+.feeClass{
+	margin-bottom: 15px !important;
+}
+
+.chosen-container-multi .chosen-choices, #datepicker, #datepicker2{
+	margin-bottom: 15px !important;
+	min-height: 34px !important;
+	border-radius: 4px !important;
+	display: block !important;
+	width: 100% !important;
+	padding: 6px 12px !important;
+	font-size: 14px !important;
+	line-height: 1.42857143 !important;
+	color: #555 !important;
+	background-color: #fff !important;
+	background-image: none !important;
+	border: 1px solid #ccc !important;
+	border-radius: 4px !important;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
+	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+#goBack{
+	font-size: 22px;
+}
+.paragraph{
+	text-align: justify;
+	font-family: raleway;
+	font-size: 18px;
+}
+#p1{
+	line-height: 5px;
+}
+#p2{
+	line-height: 10px;
+}
+#p3{
+	line-height: 20px;
+}
 #carousel-example-generic{
-	margin-top: 50px;
+	top: 25%;
+	left: 23%;
 	position: absolute;
-	height: 100%;
-	width: auto;
-	margin-left: 15%;
+	height: 60%;
+	width: 50%;
+	margin-bottom: 50px;
+
 }
 .carousel-inner{
 	position: relative;
@@ -17,26 +72,27 @@
 
 div.transparentBox
 {
-position: absolute;
-top: calc(50% - 45px);
-left: calc(50% - 140px);
-  width: 280px;
-  height: 90px;
-  background-color: #C6AE81;
-  opacity:0.6;
+	position: absolute;
+	top: calc(50% - 100px);
+	left: calc(50% - 200px);
+	width: 400px;
+	height: 200px;
+	background-color: #C6AE81;
+	opacity:0.6;
+	border-radius: 4px;
 }
 div.transparentBox p
 {
 	position: relative;
-	margin-top: 22px;
+	margin-top: 30px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 30px;
 	font-family: courier;
-  font-weight: bold;
-  color: #DBC497;
+	font-weight: bold;
+	color: #DBC497;
 }
 
 .span8 a {
-	 color: #1F0D12;
-    text-decoration: none;
+	color: #1F0D12;
+	text-decoration: none;
 }
