--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,6 +16,7 @@
 		<!--
 		BODY { 
 			background: url(cover.jpg) no-repeat center center fixed; 
+			opacity: 0.6
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
@@ -24,7 +25,7 @@
 	-->
 </style>
 
-<form action = '/root' method = 'get'>
+<form action = '/search' method = 'get'>
 	<div class="container transparentBox">
 		<div class="row offset6" id="login-container">
 			<div class="span8 offset2">
