--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,9 @@
 <br>
 <div class = "container">
 <div class="row">
-  <div class=".col-md-offset-6 paragraph">Thanks for stopping by the Film Festival Finder! We're a one-stop shop for all your film festival needs. Find the festival that fits your needs, save it and add comments. Enjoy!
+<div class = "glyph">
+  <div class=".col-md-offset-6 paragraph">Thanks for stopping by the Film Festival Finder! We're a one-stop shop for all your film festival needs. <a href="/search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> for the festival that fits your needs, save it and add comments. Enjoy!
+  </div>
   </div>
 </div>
 </div>
