--- a/views/festivals.ejs
+++ b/views/festivals.ejs
@@ -1,16 +1,29 @@
 <% include header %>
-<ul> <%for(var i =0; i<festivals.length; i++){%>
-	<li>
-<%var date= new Date(festivals[i].lastDeadline).toString().split(" ")%>
-	<%= festivals[i].name%>, Fee: <%=festivals[i].fee%>, Country: <%=festivals[i].country%>, 
-	Date: <%= date[1]+" "+date[2]+" "+date[3] %> 
-	<form action = '/id/<%= festivals[i].name %>' method = 'get'>
-           <input type = 'submit' value = 'Find Out More'>
-         </form>
-	</li> 
-<%}%>
-<br>
-<%if(festivals.length === 0){%>
-<h6> No results found. Please broaden your search terms. </h6>
-<%}%>
-<% include footer %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<br>
+			<ul> <%for(var i =0; i<festivals.length; i++){%>
+				<ul class="list-group">
+				<div id="theImage">
+					<li class="list-group-item">
+						<div> <img class="logo" src="//www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
+							<form class = "moreInfoBtn" action = '/id/<%= festivals[i].name %>' method = 'get'>
+							<button type="submit" class="btn btn-default more">Find Out More</button></form>
+							</div>
+
+							<%var date= new Date(festivals[i].lastDeadline).toString().split(" ")%>
+
+							<div class="name"> <%= festivals[i].name%></div> Fee: <%=festivals[i].fee%>, Country: <%=festivals[i].country%>, Category: <%=festivals[i].category%>
+							Date: <%= date[1]+" "+date[2]+" "+date[3] %> 
+						</li> 
+						</div>
+						<%}%>
+						<br>
+					</ul>
+				</ul>
+				<%if(festivals.length === 0){%>
+				<h6> No results found. Please broaden your search terms. </h6>
+				<%}%>
+			</div>
+			<% include footer %>
