--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,19 @@
 <% include header %>
-<div class="col-md-6">
-    <h1>Log in!</h1>
-    <hr>
-    <form class="form" method="post" action="/login">
-        <input type="text" class="form-control" placeholder="Enter your e-mail" name="email" value="stephaniejnilles@gmail.com">
-        <br><br>
-        <input type="password" class="form-control" placeholder="Choose a password" name="password" value="password">
-        <br><br>
-        <input type="submit" value="log me in" class="btn btn-primary">
-    </form>
+<div class = "container">
+	<div class="row">
+		<div class=".col-md-offset-6 paragraph">
+			<div class="col-md-6">
+				<h3>Log in</h3>
+				<hr>
+				<form class="form" method="post" action="/login">
+					<input type="text" class="form-control" placeholder="Enter your e-mail" name="email" value="stephaniejnilles@gmail.com">
+					<br><br>
+					<input type="password" class="form-control" placeholder="Choose a password" name="password" value="password">
+					<br><br>
+					<input type="submit" value="Log me in" class="btn btn-primary">
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
-
 <% include footer %>
