--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,15 +1,21 @@
 <% include header %>
-<div class="col-md-6">
-    <h1>Sign up!</h1>
-    <hr>
-    <form class="form" method="post" action="/signup">
-        <input type="text" class="form-control" placeholder="Enter your e-mail" name="email">
-        <br><br>
-        <input type="text" class="form-control" placeholder="Enter your name" name="name">
-        <br><br>
-        <input type="password" class="form-control" placeholder="Choose a password" name="password">
-        <br><br>
-        <input type="submit" value="sign up" class="btn btn-primary">
-    </form>
+<div class = "container">
+    <div class="row">
+      <div class=".col-md-offset-6 paragraph">
+        <div class="col-md-6">
+            <h3>Sign up!</h3>
+            <hr>
+            <form class="form" method="post" action="/signup">
+                <input type="text" class="form-control" placeholder="Enter your e-mail" name="email">
+                <br><br>
+                <input type="text" class="form-control" placeholder="Enter your name" name="name">
+                <br><br>
+                <input type="password" class="form-control" placeholder="Choose a password" name="password">
+                <br><br>
+                <input type="submit" value="sign up" class="btn btn-primary">
+            </form>
+        </div>
+    </div>
+</div>
 </div>
 <% include footer %>
