--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
 	<div class="container transparentBox">
 		<div class="row offset6" id="login-container">
 			<div class="span8 offset2">
-				<p><a href="/about" id="link">Foray into the Film Festival Finder for Filmmakers</a></p>
+				<p><a href="/about" id="link">Enter the Film Festival Finder for Filmmakers</a></p>
 			</div>
 		</div>
 	</div>
