--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,17 +1,26 @@
 <% include header %>
 
-<form id="commentbtn" action= '/favoriteList<%=commentID%>/comments' method="post">
-			<input type="text" name="text">
-			<input type="submit" value="Add Comment">
-		</form>
+
 <br>
-<br>
-<h1 id="comment_title"> Your Musings on:
-<div> <%=watchThing.name%> </div> </h1>
-<br>
+<div class="container">
+	<div class="row">
+	<div class="col-md-10 col-md-offset-2">
+<h3 id="comment_title"> Your Notes on the <%=watchThing.name%> </h3> </div>
+
+<div class ="col-md-4 col-md-offset-5" id="addSpace">
+<form class="form-inline" role="form" action = '/favoriteList<%=commentID%>/comments' method = 'post'>
+  <div class="form-group">
+    <input type="text" name="text" class="form-control" placeholder="Enter notes">
+  </div>
+  <button type="submit" class="btn btn-default">Add Note</button>
+
 <%for(var i =0; i<returnMe.length; i++){%>
-	 <div>"<%=returnMe[i].text%>"</div>
+	 <div id="moreSpace">"<%=returnMe[i].text%>"</div>
 <%}%>
+</div>
+</div>
+</div>
+
 
 
 
