--- a/views/extrastuff.ejs
+++ b/views/extrastuff.ejs
@@ -21,4 +21,17 @@ Month
 		<%}%>
 
 
+<div id="countryTitle"> Country </div> 
+    <select multiple class="chzn-select form-control" id="country" name="country">
+     <option value=""></option>
+     <%for (var i =0; i<uniqueCountries.length; i++){%>
+     <option value="<%=uniqueCountries[i]%>"><%=uniqueCountries[i]%></option>
+     <%}%>
+   </select>
 
+    Category <select class="form-control categoryClass" name="category">
+     <option value=""></option>
+     <%for (var i =0; i<category.length; i++){%>
+     <option value="<%=category[i]%>"><%=category[i]%></option>
+     <%}%>
+   </select> 
