--- a/views/favoriteList.ejs
+++ b/views/favoriteList.ejs
@@ -1,19 +1,26 @@
 <% include header %>
 
-<h1> Favorites List </h1>
-
+<div class="container">
+	<div class="row">
+	<h3 id="favoriteHeader"> Your Favorite Film Festivals </h3>
+		<div class="col-md-6 col-md-offset-3">
 <%for(var i =0; i<festivals.length; i++){%>
 <ul>
-<div>
-	<a href='/id/<%= festivals[i].name %>'
-	<li><%= festivals[i].name %></li> </a>
-		<input type="submit" value="Delete Entry" a href="#" data-id="<%= festivals[i].id %>" class="button deleteFav">
-	<form action = '/favoriteList<%= festivals[i].id%>/comments' method = 'get'>
+
+	<a href='/id/<%= festivals[i].name %>'>
+	<div><li id="title2" class="list-group-item"><%= festivals[i].name %>
+		<button type="submit" class="deleteFav btn btn-default" a href="#" data-id="<%= festivals[i].id %>">Delete this Festival"</button>
+		<form action = '/favoriteList<%= festivals[i].id%>/comments' method = 'get'>
 			<input type="hidden" name="id" value="<%= festivals[i].id%>">
-           <input type = 'submit' value = 'Add Musing'>
-         </form>
-</div>
+           	<button type="submit" class="btn btn-default add">Add Notes</button> </form>
+           	<img class="logo2" src="//www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
+        </li></div> </a>
+		
+
 </ul>
 <%}%>
+</div>
+</div>
+</div>
 
 <% include footer %>
