--- a/views/festivals.ejs
+++ b/views/festivals.ejs
@@ -5,16 +5,16 @@
 			<br>
 			<ul> <%for(var i =0; i<festivals.length; i++){%>
 				<ul class="list-group">
-				<div id="theImage">
+				<div id="options">
 					<li class="list-group-item">
 						<div> <img class="logo" src="//www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
 							<form class = "moreInfoBtn" action = '/id/<%= festivals[i].name %>' method = 'get'>
-							<button type="submit" class="btn btn-default more">Find Out More</button></form>
+							<button type="submit" class="btn btn-default moreBtn">Find Out More</button></form>
 							</div>
 
 							<%var date= new Date(festivals[i].lastDeadline).toString().split(" ")%>
 
-							<div class="name"> <%= festivals[i].name%></div> Fee: <%=festivals[i].fee%>, Country: <%=festivals[i].country%>, Category: <%=festivals[i].category%>
+							<div class="name"> <%= festivals[i].name%></div> Fee: <%=festivals[i].fee%>, Country: <%=festivals[i].country%>, Category: <%=festivals[i].category%>,
 							Date: <%= date[1]+" "+date[2]+" "+date[3] %> 
 						</li> 
 						</div>
@@ -23,7 +23,7 @@
 					</ul>
 				</ul>
 				<%if(festivals.length === 0){%>
-				<h6> No results found. Please broaden your search terms. </h6>
+				<h4> No results found. Please broaden your search terms. </h4>
 				<%}%>
 			</div>
 			<% include footer %>
