--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,9 +6,9 @@
 				<h3>Log in</h3>
 				<hr>
 				<form class="form" method="post" action="/login">
-					<input type="text" class="form-control" placeholder="Enter your e-mail" name="email" value="stephaniejnilles@gmail.com">
+					<input type="text" class="form-control" placeholder="Enter your e-mail" name="email">
 					<br><br>
-					<input type="password" class="form-control" placeholder="Choose a password" name="password" value="password">
+					<input type="password" class="form-control" placeholder="Choose a password" name="password">
 					<br><br>
 					<input type="submit" value="Log me in" class="btn btn-primary">
 				</form>
