--- a/views/favoriteList.ejs
+++ b/views/favoriteList.ejs
@@ -13,7 +13,7 @@
 		<form action = '/favoriteList<%= festivals[i].id%>/comments' method = 'get'>
 			<input type="hidden" name="id" value="<%= festivals[i].id%>">
            	<button type="submit" class="btn btn-default add">Add Notes</button> </form>
-           	<img class="logo2" src="//www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
+           	<img class="logo2" src="http://www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
         </li></div> </a>
 		
 
