--- a/views/festivals.ejs
+++ b/views/festivals.ejs
@@ -7,7 +7,7 @@
 				<ul class="list-group">
 				<div id="options">
 					<li class="list-group-item">
-						<div> <img class="logo" src="//www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
+						<div> <img class="logo" src="http://www.thetakes.com/festivals/<%= festivals[i].logoUrl %>"> 
 							<form class = "moreInfoBtn" action = '/id/<%= festivals[i].name %>' method = 'get'>
 							<button type="submit" class="btn btn-default moreBtn">Find Out More</button></form>
 							</div>
